--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
     "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
     "daisyui": "^4.12.10",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/filesize": "^4.2.0",
     "@types/node": "^20.16.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
