--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
